--- a/rt-thread/myproject/zhongtian_car/.config
+++ b/rt-thread/myproject/zhongtian_car/.config
@@ -103,14 +103,28 @@ CONFIG_FINSH_ARG_MAX=10
 #
 # Device virtual file system
 #
-# CONFIG_RT_USING_DFS is not set
+CONFIG_RT_USING_DFS=y
+CONFIG_DFS_USING_WORKDIR=y
+CONFIG_DFS_FILESYSTEMS_MAX=2
+CONFIG_DFS_FILESYSTEM_TYPES_MAX=2
+CONFIG_DFS_FD_MAX=16
+# CONFIG_RT_USING_DFS_MNTTABLE is not set
+# CONFIG_RT_USING_DFS_ELMFAT is not set
+CONFIG_RT_USING_DFS_DEVFS=y
+# CONFIG_RT_USING_DFS_ROMFS is not set
+# CONFIG_RT_USING_DFS_RAMFS is not set
+# CONFIG_RT_USING_DFS_UFFS is not set
+# CONFIG_RT_USING_DFS_JFFS2 is not set
+# CONFIG_RT_USING_DFS_NFS is not set
 
 #
 # Device Drivers
 #
 CONFIG_RT_USING_DEVICE_IPC=y
 CONFIG_RT_PIPE_BUFSZ=512
-# CONFIG_RT_USING_SYSTEM_WORKQUEUE is not set
+CONFIG_RT_USING_SYSTEM_WORKQUEUE=y
+CONFIG_RT_SYSTEM_WORKQUEUE_STACKSIZE=2048
+CONFIG_RT_SYSTEM_WORKQUEUE_PRIORITY=23
 CONFIG_RT_USING_SERIAL=y
 CONFIG_RT_SERIAL_USING_DMA=y
 CONFIG_RT_SERIAL_RB_BUFSZ=64
@@ -126,11 +140,21 @@ CONFIG_RT_USING_PWM=y
 # CONFIG_RT_USING_MTD is not set
 # CONFIG_RT_USING_PM is not set
 # CONFIG_RT_USING_RTC is not set
-# CONFIG_RT_USING_SDIO is not set
+CONFIG_RT_USING_SDIO=y
+CONFIG_RT_SDIO_STACK_SIZE=512
+CONFIG_RT_SDIO_THREAD_PRIORITY=15
+CONFIG_RT_MMCSD_STACK_SIZE=1024
+CONFIG_RT_MMCSD_THREAD_PREORITY=22
+CONFIG_RT_MMCSD_MAX_PARTITION=16
+# CONFIG_RT_SDIO_DEBUG is not set
 CONFIG_RT_USING_SPI=y
 # CONFIG_RT_USING_QSPI is not set
 # CONFIG_RT_USING_SPI_MSD is not set
-# CONFIG_RT_USING_SFUD is not set
+CONFIG_RT_USING_SFUD=y
+CONFIG_RT_SFUD_USING_SFDP=y
+CONFIG_RT_SFUD_USING_FLASH_INFO_TABLE=y
+# CONFIG_RT_SFUD_USING_QSPI is not set
+# CONFIG_RT_DEBUG_SFUD is not set
 # CONFIG_RT_USING_W25QXX is not set
 # CONFIG_RT_USING_GD is not set
 # CONFIG_RT_USING_ENC28J60 is not set
@@ -142,7 +166,22 @@ CONFIG_RT_USING_SPI=y
 #
 # Using WiFi
 #
-# CONFIG_RT_USING_WIFI is not set
+CONFIG_RT_USING_WIFI=y
+CONFIG_RT_WLAN_DEVICE_STA_NAME="wlan0"
+CONFIG_RT_WLAN_DEVICE_AP_NAME="wlan1"
+CONFIG_RT_WLAN_DEFAULT_PROT="lwip"
+CONFIG_RT_WLAN_SCAN_WAIT_MS=10000
+CONFIG_RT_WLAN_CONNECT_WAIT_MS=10000
+CONFIG_RT_WLAN_SSID_MAX_LENGTH=32
+CONFIG_RT_WLAN_PASSWORD_MAX_LENGTH=32
+CONFIG_RT_WLAN_SCAN_SORT=y
+CONFIG_RT_WLAN_CFG_INFO_MAX=3
+CONFIG_RT_WLAN_WORKQUEUE_THREAD_NAME="wlan_job"
+CONFIG_RT_WLAN_WORKQUEUE_THREAD_SIZE=2048
+CONFIG_RT_WLAN_WORKQUEUE_THREAD_PRIO=22
+CONFIG_RT_WLAN_DEV_EVENT_NUM=2
+CONFIG_RT_WLAN_PROT_LWIP_PBUF_FORCE=y
+# CONFIG_RT_WLAN_DEBUG is not set
 
 #
 # Using USB
@@ -153,8 +192,13 @@ CONFIG_RT_USING_SPI=y
 #
 # POSIX layer and C standard library
 #
-# CONFIG_RT_USING_LIBC is not set
+CONFIG_RT_USING_LIBC=y
 # CONFIG_RT_USING_PTHREADS is not set
+CONFIG_RT_USING_POSIX=y
+# CONFIG_RT_USING_POSIX_MMAP is not set
+# CONFIG_RT_USING_POSIX_TERMIOS is not set
+# CONFIG_RT_USING_POSIX_AIO is not set
+# CONFIG_RT_USING_MODULE is not set
 
 #
 # Network
@@ -163,17 +207,77 @@ CONFIG_RT_USING_SPI=y
 #
 # Socket abstraction layer
 #
-# CONFIG_RT_USING_SAL is not set
+CONFIG_RT_USING_SAL=y
+
+#
+# protocol stack implement
+#
+CONFIG_SAL_USING_LWIP=y
+CONFIG_SAL_USING_POSIX=y
 
 #
 # Network interface device
 #
-# CONFIG_RT_USING_NETDEV is not set
+CONFIG_RT_USING_NETDEV=y
+CONFIG_NETDEV_USING_IFCONFIG=y
+CONFIG_NETDEV_USING_PING=y
+CONFIG_NETDEV_USING_NETSTAT=y
+CONFIG_NETDEV_USING_AUTO_DEFAULT=y
 
 #
 # light weight TCP/IP stack
 #
-# CONFIG_RT_USING_LWIP is not set
+CONFIG_RT_USING_LWIP=y
+# CONFIG_RT_USING_LWIP141 is not set
+CONFIG_RT_USING_LWIP202=y
+# CONFIG_RT_USING_LWIP210 is not set
+CONFIG_RT_LWIP_IGMP=y
+CONFIG_RT_LWIP_ICMP=y
+# CONFIG_RT_LWIP_SNMP is not set
+CONFIG_RT_LWIP_DNS=y
+CONFIG_RT_LWIP_DHCP=y
+CONFIG_IP_SOF_BROADCAST=1
+CONFIG_IP_SOF_BROADCAST_RECV=1
+
+#
+# Static IPv4 Address
+#
+CONFIG_RT_LWIP_IPADDR="192.168.1.30"
+CONFIG_RT_LWIP_GWADDR="192.168.1.1"
+CONFIG_RT_LWIP_MSKADDR="255.255.255.0"
+CONFIG_RT_LWIP_UDP=y
+CONFIG_RT_LWIP_TCP=y
+CONFIG_RT_LWIP_RAW=y
+# CONFIG_RT_LWIP_PPP is not set
+CONFIG_RT_MEMP_NUM_NETCONN=8
+CONFIG_RT_LWIP_PBUF_NUM=8
+CONFIG_RT_LWIP_RAW_PCB_NUM=4
+CONFIG_RT_LWIP_UDP_PCB_NUM=4
+CONFIG_RT_LWIP_TCP_PCB_NUM=4
+CONFIG_RT_LWIP_TCP_SEG_NUM=40
+CONFIG_RT_LWIP_TCP_SND_BUF=4096
+CONFIG_RT_LWIP_TCP_WND=4096
+CONFIG_RT_LWIP_TCPTHREAD_PRIORITY=10
+CONFIG_RT_LWIP_TCPTHREAD_MBOX_SIZE=8
+CONFIG_RT_LWIP_TCPTHREAD_STACKSIZE=1024
+CONFIG_LWIP_NO_RX_THREAD=y
+CONFIG_LWIP_NO_TX_THREAD=y
+CONFIG_RT_LWIP_ETHTHREAD_PRIORITY=12
+CONFIG_RT_LWIP_ETHTHREAD_STACKSIZE=1024
+CONFIG_RT_LWIP_ETHTHREAD_MBOX_SIZE=8
+# CONFIG_RT_LWIP_REASSEMBLY_FRAG is not set
+CONFIG_LWIP_NETIF_STATUS_CALLBACK=1
+CONFIG_LWIP_NETIF_LINK_CALLBACK=1
+CONFIG_SO_REUSE=1
+CONFIG_LWIP_SO_RCVTIMEO=1
+CONFIG_LWIP_SO_SNDTIMEO=1
+CONFIG_LWIP_SO_RCVBUF=1
+# CONFIG_RT_LWIP_NETIF_LOOPBACK is not set
+CONFIG_LWIP_NETIF_LOOPBACK=0
+# CONFIG_RT_LWIP_STATS is not set
+# CONFIG_RT_LWIP_USING_HW_CHECKSUM is not set
+CONFIG_RT_LWIP_USING_PING=y
+# CONFIG_RT_LWIP_DEBUG is not set
 
 #
 # Modbus master and slave stack
@@ -184,6 +288,7 @@ CONFIG_RT_USING_SPI=y
 # AT commands
 #
 # CONFIG_RT_USING_AT is not set
+# CONFIG_LWIP_USING_DHCPD is not set
 
 #
 # VBUS(Virtual Software BUS)
@@ -233,7 +338,18 @@ CONFIG_RT_USING_SPI=y
 # CONFIG_PKG_USING_RW007 is not set
 # CONFIG_PKG_USING_COAP is not set
 # CONFIG_PKG_USING_NOPOLL is not set
-# CONFIG_PKG_USING_NETUTILS is not set
+CONFIG_PKG_USING_NETUTILS=y
+CONFIG_PKG_NETUTILS_PATH="/packages/iot/netutils"
+# CONFIG_PKG_NETUTILS_TFTP is not set
+# CONFIG_PKG_NETUTILS_IPERF is not set
+# CONFIG_PKG_NETUTILS_NETIO is not set
+# CONFIG_PKG_NETUTILS_NTP is not set
+CONFIG_PKG_NETUTILS_TELNET=y
+# CONFIG_PKG_NETUTILS_TCPDUMP is not set
+CONFIG_PKG_USING_NETUTILS_V110=y
+# CONFIG_PKG_USING_NETUTILS_V100 is not set
+# CONFIG_PKG_USING_NETUTILS_LATEST_VERSION is not set
+CONFIG_PKG_NETUTILS_VER="v1.1.0"
 # CONFIG_PKG_USING_AT_DEVICE is not set
 # CONFIG_PKG_USING_ATSRV_SOCKET is not set
 # CONFIG_PKG_USING_WIZNET is not set
@@ -282,7 +398,28 @@ CONFIG_RT_USING_SPI=y
 # tools packages
 #
 # CONFIG_PKG_USING_CMBACKTRACE is not set
-# CONFIG_PKG_USING_EASYFLASH is not set
+CONFIG_PKG_USING_EASYFLASH=y
+CONFIG_PKG_EASYFLASH_PATH="/packages/tools/EasyFlash"
+CONFIG_PKG_EASYFLASH_ENV=y
+# CONFIG_PKG_EASYFLASH_ENV_USING_NORMAL is not set
+# CONFIG_PKG_EASYFLASH_ENV_USING_WL_MODE is not set
+CONFIG_PKG_EASYFLASH_ENV_USING_PFS_MODE=y
+# CONFIG_PKG_EASYFLASH_ENV_USING_WL_PFS_MODE is not set
+CONFIG_PKG_EASYFLASH_ENV_SETTING_SIZE=2048
+CONFIG_PKG_EASYFLASH_ENV_AUTO_UPDATE=y
+CONFIG_PKG_EASYFLASH_ENV_VER_NUM=0
+# CONFIG_PKG_EASYFLASH_LOG is not set
+# CONFIG_PKG_EASYFLASH_IAP is not set
+CONFIG_PKG_EASYFLASH_ERASE_GRAN=4096
+CONFIG_PKG_EASYFLASH_START_ADDR=0
+# CONFIG_PKG_EASYFLASH_DEBUG is not set
+# CONFIG_PKG_USING_EASYFLASH_V330 is not set
+CONFIG_PKG_USING_EASYFLASH_V321=y
+# CONFIG_PKG_USING_EASYFLASH_V310 is not set
+# CONFIG_PKG_USING_EASYFLASH_V300 is not set
+# CONFIG_PKG_USING_EASYFLASH_LATEST_VERSION is not set
+CONFIG_PKG_EASYFLASH_VER="v3.2.1"
+CONFIG_PKG_EASYFLASH_VER_NUM=0x30201
 # CONFIG_PKG_USING_EASYLOGGER is not set
 # CONFIG_PKG_USING_SYSTEMVIEW is not set
 # CONFIG_PKG_USING_RDB is not set
@@ -298,7 +435,18 @@ CONFIG_RT_USING_SPI=y
 # CONFIG_PKG_USING_PIXMAN is not set
 # CONFIG_PKG_USING_LWEXT4 is not set
 # CONFIG_PKG_USING_PARTITION is not set
-# CONFIG_PKG_USING_FAL is not set
+CONFIG_PKG_USING_FAL=y
+CONFIG_PKG_FAL_PATH="/packages/system/fal"
+# CONFIG_FAL_DEBUG_CONFIG is not set
+CONFIG_FAL_DEBUG=0
+CONFIG_FAL_PART_HAS_TABLE_CFG=y
+# CONFIG_FAL_USING_SFUD_PORT is not set
+# CONFIG_PKG_USING_FAL_LATEST_VERSION is not set
+# CONFIG_PKG_USING_FAL_V00300 is not set
+CONFIG_PKG_USING_FAL_V00200=y
+# CONFIG_PKG_USING_FAL_V00100 is not set
+CONFIG_PKG_FAL_VER="v0.2.0"
+CONFIG_PKG_FAL_VER_NUM=0x00200
 # CONFIG_PKG_USING_SQLITE is not set
 # CONFIG_PKG_USING_RTI is not set
 # CONFIG_PKG_USING_LITTLEVGL2RTT is not set
@@ -306,7 +454,11 @@ CONFIG_RT_USING_SPI=y
 # CONFIG_PKG_USING_DFS_YAFFS is not set
 # CONFIG_PKG_USING_LITTLEFS is not set
 # CONFIG_PKG_USING_THREAD_POOL is not set
-# CONFIG_PKG_USING_ROBOTS is not set
+CONFIG_PKG_USING_ROBOTS=y
+CONFIG_PKG_ROBOTS_PATH="/packages/system/rt_robot"
+CONFIG_PKG_USING_ROBOTS_LATEST_VERSION=y
+CONFIG_PKG_ROBOTS_VER="latest"
+CONFIG_PKG_ROBOT_VER_NUM=0x99999
 
 #
 # peripheral libraries and drivers
@@ -314,7 +466,15 @@ CONFIG_RT_USING_SPI=y
 # CONFIG_PKG_USING_SENSORS_DRIVERS is not set
 # CONFIG_PKG_USING_REALTEK_AMEBA is not set
 # CONFIG_PKG_USING_SHT2X is not set
-# CONFIG_PKG_USING_STM32_SDIO is not set
+CONFIG_PKG_USING_STM32_SDIO=y
+CONFIG_SDIO_BUFF_SIZE=4096
+CONFIG_SDIO_MAX_FREQ=24000000
+CONFIG_SDIO_ALIGN_LEN=32
+# CONFIG_SDIO_USING_1_BIT is not set
+CONFIG_PKG_STM32_SDIO_PATH="/packages/peripherals/stm32_sdio"
+CONFIG_PKG_USING_STM32_SDIO_V102=y
+# CONFIG_PKG_USING_STM32_SDIO_LATEST_VERSION is not set
+CONFIG_PKG_STM32_SDIO_VER="v1.0.2"
 # CONFIG_PKG_USING_ICM20608 is not set
 # CONFIG_PKG_USING_U8G2 is not set
 # CONFIG_PKG_USING_BUTTON is not set
@@ -392,9 +552,11 @@ CONFIG_PKG_INFRARED_VER="latest"
 #
 # Onboard Peripheral Drivers
 #
-# CONFIG_BSP_USING_FLASH is not set
+CONFIG_BSP_USING_FLASH=y
 # CONFIG_BSP_USING_TF_CARD is not set
-# CONFIG_BSP_USING_WIFI is not set
+CONFIG_BSP_USING_WIFI=y
+# CONFIG_BSP_USING_WIFI_THREAD_INIT is not set
+CONFIG_BSP_USING_WIFI_AUTO_INIT=y
 CONFIG_BSP_USING_LCD=y
 # CONFIG_BSP_USING_AUDIO is not set
 
@@ -416,8 +578,8 @@ CONFIG_BSP_UART_USING_DMA_RX=y
 # CONFIG_BSP_USING_SPI1 is not set
 # CONFIG_BSP_USING_SPI2 is not set
 CONFIG_BSP_USING_SPI3=y
-# CONFIG_BSP_USING_QSPI is not set
-# CONFIG_BSP_USING_SDIO is not set
+CONFIG_BSP_USING_QSPI=y
+CONFIG_BSP_USING_SDIO=y
 CONFIG_BSP_USING_GPIO=y
 # CONFIG_BSP_USING_PM is not set
 # CONFIG_BSP_USING_ADC1_CH13 is not set
@@ -430,7 +592,7 @@ CONFIG_BSP_USING_TIM16=y
 #
 # External Libraries
 #
-# CONFIG_RT_USING_WIFI_6181_LIB is not set
-# CONFIG_RT_USING_OTA_LIB is not set
+CONFIG_RT_USING_WIFI_6181_LIB=y
+CONFIG_RT_USING_OTA_LIB=y
 # CONFIG_RT_USING_CLOUDSDK_LIB is not set
 # CONFIG_RT_USING_SMARTCONFIG_LIB is not set
