--- a/rt-thread/myproject/zhongtian_car/.config
+++ b/rt-thread/myproject/zhongtian_car/.config
@@ -570,7 +570,7 @@ CONFIG_BSP_USING_LCD=y
 # On-chip Peripheral Drivers
 #
 CONFIG_BSP_USING_UART1=y
-# CONFIG_BSP_USING_UART2 is not set
+CONFIG_BSP_USING_UART2=y
 # CONFIG_BSP_USING_UART3 is not set
 # CONFIG_BSP_USING_LPUART1 is not set
 CONFIG_BSP_UART_USING_DMA_RX=y
